<resources>
    <string name="app_name">TEST2</string>
    <string name="log_in">Log In</string>
    <string name="home">WELCOME</string>
    <string name="home2">Home</string>
    <string name="love_scars_3"><![CDATA[Love Scars <3]]></string>
    <string name="email">EMAIL:</string>
    <string name="password">PASSWORD:</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="didn_t_have_an_account">Didn\'t have an account?</string>
    <string name="register_here">Register here</string>
    <string name="button">Register</string>
    <string name="passowrd">PASSWORD:</string>
    <string name="log_in_here">Log in here</string>
    <string name="lastname">LASTNAME:</string>
    <string name="hello">Hello!</string>
    <string name="are_you_new_here">Are you new here?</string>
    <string name="firstname">FIRSTNAME:</string>
    <string name="email2">EMAIL:</string>
    <string name="back_to_log_in">Back to Log in</string>
    <string name="send">Send</string>
    <string name="enter_email_address">Enter Email Address:</string>
    <string name="forgot_password2">Forgot Password</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="resend">Resend</string>
    <string name="if_you_didn_t_receive_a_code">If you didn\'t receive a code,</string>
    <string name="send2">Send</string>
    <string name="register_here2">Register Here</string>
    <string name="enter_verification_code">Enter Verification Code:</string>
    <string name="verification">Verification</string>
    <string name="new_password">New Password</string>
    <string name="submit">Submit</string>
    <string name="confirm_new_password">Confirm New Password:</string>
    <string name="enter_new_password">Enter New Password:</string>
    <string name="report_a_problem">REPORT A PROBLEM</string>
    <string name="filed_reports">FILED REPORTS</string>
    <string name="about">ABOUT</string>
    <string name="log_out">LOG OUT</string>
    <string name="reportprob">The main menu is where the “Report a Problem” button will be found, when clicked, you are taken to the Problem Category Section where you can choose the category for the problem you will report.</string>
    <string name="category">After choosing the right category for the problem, you are taken to the Problem Details Section where you can provide more specific details for the problem, details include photos, location, date and time, description, and the level of urgency of the problem. You are then to check the “Agree to Terms and Conditions” button, signifying that you are aware of how your data will be used, before submitting the problem.</string>
    <string name="filedrep">The main menu is where the “Filed Reports” button will be found, when clicked, you are taken to the Filed Reports Section where you can view all your filed reports, you are also given the choice to categorize the reports as either “Ongoing” or “Completed” reports for a filtered view of the filed reports.</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>