<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    tools:context=".MainMenu">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="331dp"
        android:layout_height="338dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="41dp"
        android:layout_marginEnd="40dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/icon_main" />

    <Button
        android:id="@+id/report"
        android:layout_width="300dp"
        android:layout_height="42dp"
        android:layout_marginStart="60dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="60dp"
        android:background="@drawable/button2"
        android:elevation="50dp"
        android:text="@string/report_a_problem"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <Button
        android:id="@+id/button6"
        android:layout_width="300dp"
        android:layout_height="42dp"
        android:layout_marginStart="60dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="60dp"
        android:background="@drawable/button2"
        android:elevation="40dp"
        android:text="@string/filed_reports"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/report" />

    <Button
        android:id="@+id/button7"
        android:layout_width="300dp"
        android:layout_height="42dp"
        android:layout_marginStart="60dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="60dp"
        android:background="@drawable/button2"
        android:elevation="30dp"
        android:text="@string/about"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button6" />

    <Button
        android:id="@+id/button8"
        android:layout_width="300dp"
        android:layout_height="42dp"
        android:layout_marginStart="60dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="60dp"
        android:background="@drawable/button2"
        android:elevation="20dp"
        android:text="@string/log_out"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button7" />
</androidx.constraintlayout.widget.ConstraintLayout>