<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    tools:context=".Verification">

    <TextView
        android:id="@+id/textView16"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="148dp"
        android:layout_marginTop="108dp"
        android:layout_marginEnd="148dp"
        android:text="@string/verification"
        android:textColor="#ffffff"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginStart="38dp"
        android:layout_marginTop="640dp"
        android:layout_marginEnd="38dp"
        android:alpha="0.4"
        android:background="#F1E3D5"
        android:elevation="2dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView17"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="116dp"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="116dp"
        android:text="@string/enter_verification_code"
        android:textAlignment="center"
        android:textColor="#ffffff"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView16" />

    <EditText
        android:id="@+id/editTextTextPersonName8"
        android:layout_width="63dp"
        android:layout_height="63dp"
        android:layout_marginStart="7dp"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="7dp"
        android:background="@drawable/code"
        android:elevation="10dp"
        android:gravity="center"
        android:imeOptions="actionNext"
        android:importantForAutofill="no"
        android:inputType="number"
        android:maxLength="1"
        app:layout_constraintEnd_toStartOf="@+id/editTextTextPersonName9"
        app:layout_constraintStart_toEndOf="@+id/editTextTextPersonName7"
        app:layout_constraintTop_toBottomOf="@+id/textView17" />

    <EditText
        android:id="@+id/editTextTextPersonName3"
        android:layout_width="63dp"
        android:layout_height="63dp"
        android:layout_marginStart="53dp"
        android:layout_marginTop="276dp"
        android:layout_marginEnd="7dp"
        android:background="@drawable/code"
        android:elevation="10dp"
        android:gravity="center"
        android:imeOptions="actionNext"
        android:importantForAutofill="no"
        android:inputType="number"
        android:maxLength="1"
        app:layout_constraintEnd_toStartOf="@+id/editTextTextPersonName7"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextTextPersonName7"
        android:layout_width="63dp"
        android:layout_height="63dp"
        android:layout_marginStart="7dp"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="7dp"
        android:background="@drawable/code"
        android:elevation="10dp"
        android:gravity="center"
        android:imeOptions="actionNext"
        android:importantForAutofill="no"
        android:inputType="number"
        android:maxLength="1"
        app:layout_constraintEnd_toStartOf="@+id/editTextTextPersonName8"
        app:layout_constraintStart_toEndOf="@+id/editTextTextPersonName3"
        app:layout_constraintTop_toBottomOf="@+id/textView17" />

    <EditText
        android:id="@+id/editTextTextPersonName9"
        android:layout_width="63dp"
        android:layout_height="63dp"
        android:layout_marginStart="7dp"
        android:layout_marginTop="276dp"
        android:layout_marginEnd="53dp"
        android:background="@drawable/code"
        android:elevation="10dp"
        android:gravity="center"
        android:imeOptions="actionNext"
        android:importantForAutofill="no"
        android:inputType="number"
        android:maxLength="1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/editTextTextPersonName8"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/verification"
        android:layout_width="246dp"
        android:layout_height="36dp"
        android:layout_marginStart="89dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="89dp"
        android:background="@drawable/button2"
        android:backgroundTint="#800000"
        android:elevation="10dp"
        android:text="@string/send2"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.153"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView19" />

    <TextView
        android:id="@+id/textView19"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="109dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="4dp"
        android:text="@string/if_you_didn_t_receive_a_code"
        android:textColor="@color/white"
        app:layout_constraintEnd_toStartOf="@+id/textView20"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName3" />

    <TextView
        android:id="@+id/textView20"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="109dp"
        android:text="@string/resend"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView19"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName9" />

    <TextView
        android:id="@+id/textView21"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="76dp"
        android:layout_marginTop="20dp"
        android:text="@string/don_t_have_an_account"
        android:textColor="@color/white"
        app:layout_constraintEnd_toStartOf="@+id/regHere"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view" />

    <TextView
        android:id="@+id/regHere"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="7dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="97dp"
        android:text="@string/register_here2"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView21"
        app:layout_constraintTop_toBottomOf="@+id/view" />

</androidx.constraintlayout.widget.ConstraintLayout>